--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
         <artifactId>ehcache-web</artifactId>
         <version>2.0.4</version>
       </dependency>
+      <dependency>
+        <groupId>com.googlecode.log4jdbc</groupId>
+        <artifactId>log4jdbc</artifactId>
+        <version>1.2</version>
+      </dependency>
     </dependencies>
     
     <build>
